<resources>
    <string name="app_name">TakeMeAway</string>
    <string name="gmaps">{google maps key}</string>
    <string name="privateKey">{your private key}</string>
    <string name="publicKey">{your public key}</string>
    <string name="salt">{your salt}</string>
    <string name="aid">{your aid}</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="swipe_left">Swipe left</string>
    <string name="swipe_right">Swipe right</string>
    <string name="view_swiped_left">%1$s swiped to left!</string>
    <string name="view_swiped_right">%1$s swiped to right!</string>
    <string name="dummy_text">Test</string>
    <string name="dummy_fab">Fab Test</string>
    <string name="home">TakeMeAway</string>
    <string name="open_drawer">open drawer</string>
    <string name="close_drawer">close drawer</string>
    <string name="registerlink">No account yet? Create one</string>
    <string name="filters">Filters</string>
    <string name="profile">Profile</string>
    <string name="terms">Terms &amp; Conditions</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="registertext">Register</string>
    <string name="saveditemstext">My Saved Items</string>
    <string name="adminmenutext">Admin</string>
    <string name="faqtext">Frequently Asked Questions</string>
    <string name="feedbacktext">Send Feedback</string>
    <string name="mainheadertext">Take me to …</string>
    <string name="bookingpageheader">We\'re Taking You Away!</string>
    <string name="settingstitle">Search Settings</string>
    <string name="privacy">Privacy Policy</string>
    <string name="no_rooms_left">No rooms left</string>
    <string name="rooms_left_count">5 rooms left!</string>
    <string name="destinationImageName">destinationImageNameForTransition</string>
    <string name="animCityName">animCityName</string>
    <string name="destinationImageName2">destImageName2</string>
    <string name="transitionGradient">transitionGradient</string>
    <string name="introheader">Ready for your trip to %1$s?</string>
    <string name="hotelhelpertext">Simply click each of the buttons below to select which flights you would like on Friday, and which room you would like in %1$s.</string>
    <string name="feedbackActivityTitle">Feedback</string>
    <string name="pernightprice">Per night: %1$s%2$s</string>
    <string name="hotesltitlebartext">Hotels in %1$s</string>
    <string name="hoteldetailstitlebartext">Hotel Details</string>
    <string name="loginactivityheading">Login</string>
    <string name="privacypolictyheadingtext">Privacy Policy</string>
    <string name="profileactivityheadingtext">Profile</string>
    <string name="registeractivityheadingtext">Register</string>
    <string name="loadingdetailsdialog">Loading Details</string>
    <string name="termsactivityheadingtext"><![CDATA[Terms & Conditions]]></string>
    <string name="savedbookingwarning">This hotel may not be available anymore</string>
    <string name="savedbookingwarningheading">Remember</string>
    <string name="canceltext">Cancel</string>
    <string name="oktext">OK</string>
    <string name="loadsavedtripsnotice">Loading Saved Trips</string>
    <string name="somethingwentwrongerror">Something went wrong. We\'ve made a note of it.</string>
    <string name="sorry">Sorry</string>
    <string name="removesaveditemmessage">Removing Saved Item</string>
    <string name="flightCostBookingScreen">Est. Flight cost p/p: %1$s%2$s</string>
    <string name="hotelCostBookingScreen">Hotel cost: %1$s%2$s</string>
    <string name="noDestinationsLoggedIn">We couldn\'t find any destinations for you. Try changing your search parameters.</string>
    <string name="noDestinationsLoggedOut">We couldn\'t find any destinations for you. If you register you can change your budget, the number of people travelling and the weekend you\'d like to go away.</string>
    <string name="loadingDestinations">Loading Destinations</string>
    <string name="loadingDestinationsWithHotels">Loading Destinations with Available Hotels</string>
    <string name="changeBudgetText">Change Budget</string>
    <string name="noDestinationsText">No new destinations were found within your budget. Try increasing it.</string>
    <string name="noDestinationErrorText">There was an error on the server and no destinations were loaded.</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="select_your_flight">Select your flight</string>
    <string name="pick_your_room">Pick your room</string>
    <string name="with">with</string>
    <string name="email_details">Or we can email you all the details instead.</string>
    <string name="email_me_details">EMAIL BOOKING LINKS</string>
    <string name="ready_for_trip">Ready for your trip?</string>
    <string name="word_yes">Yes</string>
    <string name="word_no">No</string>
    <string name="word_welcome">Welcome!</string>
    <string name="on_register_notice">We\'ve set your home airport to London. Would you like to change this now?</string>
    <string name="reviews_webview_toolbar">Hotel Reviews</string>
    <string name="wi_owm_200">&#xf01e;</string>
    <string name="wi_owm_201">&#xf01e;</string>
    <string name="wi_owm_202">&#xf01e;</string>
    <string name="wi_owm_210">&#xf016;</string>
    <string name="wi_owm_211">&#xf016;</string>
    <string name="wi_owm_212">&#xf016;</string>
    <string name="wi_owm_221">&#xf016;</string>
    <string name="wi_owm_230">&#xf01e;</string>
    <string name="wi_owm_231">&#xf01e;</string>
    <string name="wi_owm_232">&#xf01e;</string>
    <string name="wi_owm_300">&#xf01c;</string>
    <string name="wi_owm_301">&#xf01c;</string>
    <string name="wi_owm_302">&#xf019;</string>
    <string name="wi_owm_310">&#xf017;</string>
    <string name="wi_owm_311">&#xf019;</string>
    <string name="wi_owm_312">&#xf019;</string>
    <string name="wi_owm_313">&#xf01a;</string>
    <string name="wi_owm_314">&#xf019;</string>
    <string name="wi_owm_321">&#xf01c;</string>
    <string name="wi_owm_500">&#xf01c;</string>
    <string name="wi_owm_501">&#xf019;</string>
    <string name="wi_owm_502">&#xf019;</string>
    <string name="wi_owm_503">&#xf019;</string>
    <string name="wi_owm_504">&#xf019;</string>
    <string name="wi_owm_511">&#xf017;</string>
    <string name="wi_owm_520">&#xf01a;</string>
    <string name="wi_owm_521">&#xf01a;</string>
    <string name="wi_owm_522">&#xf01a;</string>
    <string name="wi_owm_531">&#xf01d;</string>
    <string name="wi_owm_600">&#xf01b;</string>
    <string name="wi_owm_601">&#xf01b;</string>
    <string name="wi_owm_602">&#xf0b5;</string>
    <string name="wi_owm_611">&#xf017;</string>
    <string name="wi_owm_612">&#xf017;</string>
    <string name="wi_owm_615">&#xf017;</string>
    <string name="wi_owm_616">&#xf017;</string>
    <string name="wi_owm_620">&#xf017;</string>
    <string name="wi_owm_621">&#xf01b;</string>
    <string name="wi_owm_622">&#xf01b;</string>
    <string name="wi_owm_701">&#xf01a;</string>
    <string name="wi_owm_711">&#xf062;</string>
    <string name="wi_owm_721">&#xf0b6;</string>
    <string name="wi_owm_731">&#xf063;</string>
    <string name="wi_owm_741">&#xf014;</string>
    <string name="wi_owm_761">&#xf063;</string>
    <string name="wi_owm_762">&#xf063;</string>
    <string name="wi_owm_771">&#xf011;</string>
    <string name="wi_owm_781">&#xf056;</string>
    <string name="wi_owm_800">&#xf00d;</string>
    <string name="wi_owm_801">&#xf011;</string>
    <string name="wi_owm_802">&#xf011;</string>
    <string name="wi_owm_803">&#xf012;</string>
    <string name="wi_owm_804">&#xf013;</string>
    <string name="wi_owm_900">&#xf056;</string>
    <string name="wi_owm_901">&#xf01d;</string>
    <string name="wi_owm_902">&#xf073;</string>
    <string name="wi_owm_903">&#xf076;</string>
    <string name="wi_owm_904">&#xf072;</string>
    <string name="wi_owm_905">&#xf021;</string>
    <string name="wi_owm_906">&#xf015;</string>
    <string name="wi_owm_957">&#xf050;</string>
    <string name="wi_owm_day_200">&#xf010;</string>
    <string name="wi_owm_day_201">&#xf010;</string>
    <string name="wi_owm_day_202">&#xf010;</string>
    <string name="wi_owm_day_210">&#xf005;</string>
    <string name="wi_owm_day_211">&#xf005;</string>
    <string name="wi_owm_day_212">&#xf005;</string>
    <string name="wi_owm_day_221">&#xf005;</string>
    <string name="wi_owm_day_230">&#xf010;</string>
    <string name="wi_owm_day_231">&#xf010;</string>
    <string name="wi_owm_day_232">&#xf010;</string>
    <string name="wi_owm_day_300">&#xf00b;</string>
    <string name="wi_owm_day_301">&#xf00b;</string>
    <string name="wi_owm_day_302">&#xf008;</string>
    <string name="wi_owm_day_310">&#xf008;</string>
    <string name="wi_owm_day_311">&#xf008;</string>
    <string name="wi_owm_day_312">&#xf008;</string>
    <string name="wi_owm_day_313">&#xf008;</string>
    <string name="wi_owm_day_314">&#xf008;</string>
    <string name="wi_owm_day_321">&#xf00b;</string>
    <string name="wi_owm_day_500">&#xf00b;</string>
    <string name="wi_owm_day_501">&#xf008;</string>
    <string name="wi_owm_day_502">&#xf008;</string>
    <string name="wi_owm_day_503">&#xf008;</string>
    <string name="wi_owm_day_504">&#xf008;</string>
    <string name="wi_owm_day_511">&#xf006;</string>
    <string name="wi_owm_day_520">&#xf009;</string>
    <string name="wi_owm_day_521">&#xf009;</string>
    <string name="wi_owm_day_522">&#xf009;</string>
    <string name="wi_owm_day_531">&#xf00e;</string>
    <string name="wi_owm_day_600">&#xf00a;</string>
    <string name="wi_owm_day_601">&#xf0b2;</string>
    <string name="wi_owm_day_602">&#xf00a;</string>
    <string name="wi_owm_day_611">&#xf006;</string>
    <string name="wi_owm_day_612">&#xf006;</string>
    <string name="wi_owm_day_615">&#xf006;</string>
    <string name="wi_owm_day_616">&#xf006;</string>
    <string name="wi_owm_day_620">&#xf006;</string>
    <string name="wi_owm_day_621">&#xf00a;</string>
    <string name="wi_owm_day_622">&#xf00a;</string>
    <string name="wi_owm_day_701">&#xf009;</string>
    <string name="wi_owm_day_711">&#xf062;</string>
    <string name="wi_owm_day_721">&#xf0b6;</string>
    <string name="wi_owm_day_731">&#xf063;</string>
    <string name="wi_owm_day_741">&#xf003;</string>
    <string name="wi_owm_day_761">&#xf063;</string>
    <string name="wi_owm_day_762">&#xf063;</string>
    <string name="wi_owm_day_771">&#xf000;</string>
    <string name="wi_owm_day_781">&#xf056;</string>
    <string name="wi_owm_day_800">&#xf00d;</string>
    <string name="wi_owm_day_801">&#xf000;</string>
    <string name="wi_owm_day_802">&#xf000;</string>
    <string name="wi_owm_day_803">&#xf000;</string>
    <string name="wi_owm_day_804">&#xf00c;</string>
    <string name="wi_owm_day_900">&#xf056;</string>
    <string name="wi_owm_day_901">&#xf00e;</string>
    <string name="wi_owm_day_902">&#xf073;</string>
    <string name="wi_owm_day_903">&#xf076;</string>
    <string name="wi_owm_day_904">&#xf072;</string>
    <string name="wi_owm_day_905">&#xf0c4;</string>
    <string name="wi_owm_day_906">&#xf004;</string>
    <string name="wi_owm_day_957">&#xf050;</string>
    <string name="wi_owm_night_200">&#xf02d;</string>
    <string name="wi_owm_night_201">&#xf02d;</string>
    <string name="wi_owm_night_202">&#xf02d;</string>
    <string name="wi_owm_night_210">&#xf025;</string>
    <string name="wi_owm_night_211">&#xf025;</string>
    <string name="wi_owm_night_212">&#xf025;</string>
    <string name="wi_owm_night_221">&#xf025;</string>
    <string name="wi_owm_night_230">&#xf02d;</string>
    <string name="wi_owm_night_231">&#xf02d;</string>
    <string name="wi_owm_night_232">&#xf02d;</string>
    <string name="wi_owm_night_300">&#xf02b;</string>
</resources>