<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:weightSum="1">

    <include
        android:id="@+id/toolbar"
        layout="@layout/new_toolbar_home" />

    <TextView
        android:id="@+id/introHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_margin="10dp"
        android:text="@string/ready_for_trip"
        android:textColor="@color/brand_dark"
        android:textSize="18sp"
        fontPath="fonts/AlteHaasGroteskBold.ttf"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/introHeader">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/tripPictures"
                android:layout_width="match_parent"
                android:layout_height="200dp"

                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <ImageView
                            android:id="@+id/cityImage"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            app:srcCompat="@drawable/common_full_open_on_phone" />

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:alpha=".8"
                            android:background="@drawable/gradientblackdown">

                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:alpha=".8"
                            android:background="@drawable/gradientblackup"
                            android:layout_alignParentBottom="true">

                        </RelativeLayout>

                        <TextView
                            android:id="@+id/cityName"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_alignParentStart="true"
                            android:padding="10dp"
                            android:textColor="@color/brand_light" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <ImageView
                            android:id="@+id/hotelImage"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            app:srcCompat="@drawable/common_full_open_on_phone" />

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:alpha=".8"
                            android:background="@drawable/gradientblackdown">

                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:alpha=".8"
                            android:background="@drawable/gradientblackup"
                            android:layout_alignParentBottom="true">

                        </RelativeLayout>

                        <TextView
                            android:id="@+id/hotelName"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_alignParentStart="true"
                            android:padding="10dp"
                            android:textColor="@color/brand_light" />

                    </RelativeLayout>

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/flightCost"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:paddingEnd="10dp"
                    android:textColor="@color/brand_light" />

                <TextView
                    android:id="@+id/hotelCost"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:paddingEnd="10dp"
                    android:textColor="@color/brand_light" />
            </LinearLayout>

            <TextView
                android:id="@+id/totalTripCost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:textAlignment="center"
                android:textColor="@color/brand_dark"
                android:textSize="18sp" />

            <LinearLayout
                android:id="@+id/intro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <!-- Email Label -->
                <TextView
                    android:id="@+id/fromSavedItemText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="As this is one of your saved destinations, we can't show you up-to-date prices."
                    android:textColor="@color/brand_dark"
                    android:textStyle="bold|italic"
                    android:visibility="gone" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp">

                            <TextView
                                android:id="@+id/ss_text"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center_horizontal"
                                android:text="Flights through" />

                            <ImageView
                                android:id="@+id/imageView4"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/ss_text"
                                android:layout_alignParentStart="true"
                                android:layout_alignParentEnd="false"
                                android:src="@drawable/skyscannerlogo" />
                        </RelativeLayout>

                    </LinearLayout>

                    <Button
                        android:id="@+id/flightBooking"
                        style="@style/BrandButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:text="@string/select_your_flight" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp">

                            <TextView
                                android:id="@+id/bc_text"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center_horizontal"
                                android:text="Hotel from" />

                            <ImageView
                                android:id="@+id/imageView5"
                                android:layout_width="match_parent"
                                android:layout_height="30dp"
                                android:layout_below="@+id/bc_text"
                                android:layout_alignParentStart="true"
                                android:layout_alignParentEnd="false"
                                android:src="@drawable/bookingcomlogo" />

                        </RelativeLayout>
                    </LinearLayout>

                    <Button
                        android:id="@+id/hotelBooking"
                        style="@style/BrandButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:text="@string/pick_your_room" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/tripBooking"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:padding="10dp"
                    android:text="Simply click on the buttons above to get started booking your weekend away!"
                    android:textColor="@color/brand_dark" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    android:padding="10dp"
                    android:text="Or tap the button below and we'll email you the links"
                    android:textColor="@color/brand_dark" />

                <Button
                    android:id="@+id/emailDetails"
                    style="@style/BrandButton"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/email_me_details"
                    android:textAllCaps="false" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>



    <RelativeLayout
        android:id="@+id/detailsLoader"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/brand_dark"
        android:visibility="gone">

    </RelativeLayout>

</RelativeLayout>